[gd_scene load_steps=13 format=3 uid="uid://5xv0hvevy1eh"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_fcn2k"]
[ext_resource type="PackedScene" uid="uid://bux841l6gf5kl" path="res://scenes/backgrounds.tscn" id="2_myh84"]
[ext_resource type="Script" path="res://scripts/MenuParallaxBackground.gd" id="2_okxjt"]
[ext_resource type="Texture2D" uid="uid://chklshqi6ewio" path="res://assets/Background/Purple.png" id="2_qg8yn"]
[ext_resource type="PackedScene" uid="uid://bvsos5a2fe2kp" path="res://scenes/tile_map.tscn" id="3_k5n18"]
[ext_resource type="PackedScene" uid="uid://coj10vuhbtr2t" path="res://scenes/player.tscn" id="4_d0kg2"]
[ext_resource type="Theme" uid="uid://bep32cc2ji5ul" path="res://themes/large_button.tres" id="6_hh2dn"]
[ext_resource type="FontFile" uid="uid://2skr7w2fglkm" path="res://assets/ken_fonts/kenvector_future.ttf" id="6_i88sf"]
[ext_resource type="PackedScene" uid="uid://fut6e3fllv5r" path="res://scenes/change_scene_animation.tscn" id="8_q15wg"]
[ext_resource type="PackedScene" uid="uid://ci4ecoonombb" path="res://scenes/settings_menu.tscn" id="8_tat2j"]
[ext_resource type="PackedScene" uid="uid://c2wu0yxolhuh" path="res://scenes/credits_page.tscn" id="9_2tn6j"]
[ext_resource type="Theme" uid="uid://c1ta341npox26" path="res://themes/medium_button.tres" id="9_064ff"]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_fcn2k")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_okxjt")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(64, 64)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
position = Vector2(576, 320)
texture = ExtResource("2_qg8yn")
region_enabled = true
region_rect = Rect2(0, 0, 1152, 648)

[node name="backgrounds" parent="." instance=ExtResource("2_myh84")]

[node name="TileMap" parent="." instance=ExtResource("3_k5n18")]
layer_0/tile_data = PackedInt32Array(2490368, 393216, 0, 2555904, 393216, 1, 2621440, 393216, 2, 2490369, 458752, 0, 2555905, 458752, 1, 2621441, 458752, 2, 2490370, 524288, 0, 2555906, 524288, 1, 2621442, 524288, 2, 2490371, 393216, 0, 2555907, 393216, 1, 2621443, 393216, 2, 2490372, 458752, 0, 2555908, 458752, 1, 2621444, 458752, 2, 2490373, 524288, 0, 2555909, 524288, 1, 2621445, 524288, 2, 2490374, 393216, 0, 2555910, 393216, 1, 2621446, 393216, 2, 2490375, 458752, 0, 2555911, 458752, 1, 2621447, 458752, 2, 2490376, 524288, 0, 2555912, 524288, 1, 2621448, 524288, 2, 2490377, 393216, 0, 2555913, 393216, 1, 2621449, 393216, 2, 2490378, 458752, 0, 2555914, 458752, 1, 2621450, 458752, 2, 2490379, 524288, 0, 2555915, 524288, 1, 2621451, 524288, 2, 2490380, 393216, 0, 2555916, 393216, 1, 2621452, 393216, 2, 2490381, 458752, 0, 2555917, 458752, 1, 2621453, 458752, 2, 2490382, 524288, 0, 2555918, 524288, 1, 2621454, 524288, 2, 2490383, 393216, 0, 2555919, 393216, 1, 2621455, 393216, 2, 2490384, 458752, 0, 2555920, 458752, 1, 2621456, 458752, 2, 2490385, 524288, 0, 2555921, 524288, 1, 2621457, 524288, 2, 2490386, 393216, 0, 2555922, 393216, 1, 2621458, 393216, 2, 2490387, 458752, 0, 2555923, 458752, 1, 2621459, 458752, 2, 2490388, 524288, 0, 2555924, 524288, 1, 2621460, 524288, 2, 2490389, 393216, 0, 2555925, 393216, 1, 2621461, 393216, 2, 2490390, 458752, 0, 2555926, 458752, 1, 2621462, 458752, 2, 2490391, 524288, 0, 2555927, 524288, 1, 2621463, 524288, 2, 2490392, 393216, 0, 2555928, 393216, 1, 2621464, 393216, 2, 2490393, 458752, 0, 2555929, 458752, 1, 2621465, 458752, 2, 2490394, 524288, 0, 2555930, 524288, 1, 2621466, 524288, 2, 2490395, 393216, 0, 2555931, 393216, 1, 2621467, 393216, 2, 2490396, 458752, 0, 2555932, 458752, 1, 2621468, 458752, 2, 2490397, 524288, 0, 2555933, 524288, 1, 2621469, 524288, 2, 2490398, 393216, 0, 2555934, 393216, 1, 2621470, 393216, 2, 2490399, 458752, 0, 2555935, 458752, 1, 2621471, 458752, 2, 2490400, 524288, 0, 2555936, 524288, 1, 2621472, 524288, 2, 2490401, 393216, 0, 2555937, 393216, 1, 2621473, 393216, 2, 2490402, 458752, 0, 2555938, 458752, 1, 2621474, 458752, 2, 2490403, 524288, 0, 2555939, 524288, 1, 2621475, 524288, 2, 2490404, 393216, 0, 2555940, 393216, 1, 2621476, 393216, 2, 2490405, 458752, 0, 2555941, 458752, 1, 2621477, 458752, 2, 2490406, 524288, 0, 2555942, 524288, 1, 2621478, 524288, 2, 2490407, 393216, 0, 2555943, 393216, 1, 2621479, 393216, 2, 2490408, 458752, 0, 2555944, 458752, 1, 2621480, 458752, 2, 2490409, 524288, 0, 2555945, 524288, 1, 2621481, 524288, 2, 2490410, 393216, 0, 2555946, 393216, 1, 2621482, 393216, 2, 2490411, 458752, 0, 2555947, 458752, 1, 2621483, 458752, 2, 2490412, 524288, 0, 2555948, 524288, 1, 2621484, 524288, 2, 2490413, 393216, 0, 2555949, 393216, 1, 2621485, 393216, 2, 2490414, 458752, 0, 2555950, 458752, 1, 2621486, 458752, 2, 2490415, 524288, 0, 2555951, 524288, 1, 2621487, 524288, 2, 2490416, 393216, 0, 2555952, 393216, 1, 2621488, 393216, 2, 2490417, 458752, 0, 2555953, 458752, 1, 2621489, 458752, 2, 2490418, 524288, 0, 2555954, 524288, 1, 2621490, 524288, 2, 2490419, 393216, 0, 2555955, 393216, 1, 2621491, 393216, 2, 2490420, 458752, 0, 2555956, 458752, 1, 2621492, 458752, 2, 2490421, 524288, 0, 2555957, 524288, 1, 2621493, 524288, 2, 2490422, 393216, 0, 2555958, 393216, 1, 2621494, 393216, 2, 2490423, 458752, 0, 2555959, 458752, 1, 2621495, 458752, 2, 2490424, 524288, 0, 2555960, 524288, 1, 2621496, 524288, 2, 2490425, 393216, 0, 2555961, 393216, 1, 2621497, 393216, 2, 2490426, 458752, 0, 2555962, 458752, 1, 2621498, 458752, 2, 2490427, 524288, 0, 2555963, 524288, 1, 2621499, 524288, 2, 2490428, 393216, 0, 2555964, 393216, 1, 2621500, 393216, 2, 2490429, 458752, 0, 2555965, 458752, 1, 2621501, 458752, 2, 2490430, 524288, 0, 2555966, 524288, 1, 2621502, 524288, 2, 2490431, 393216, 0, 2555967, 393216, 1, 2621503, 393216, 2, 2490432, 458752, 0, 2555968, 458752, 1, 2621504, 458752, 2, 2490433, 524288, 0, 2555969, 524288, 1, 2621505, 524288, 2, 2490434, 393216, 0, 2555970, 393216, 1, 2621506, 393216, 2, 2490435, 458752, 0, 2555971, 458752, 1, 2621507, 458752, 2, 2490436, 524288, 0, 2555972, 524288, 1, 2621508, 524288, 2, 2490437, 393216, 0, 2555973, 393216, 1, 2621509, 393216, 2, 2490438, 458752, 0, 2555974, 458752, 1, 2621510, 458752, 2, 2490439, 524288, 0, 2555975, 524288, 1, 2621511, 524288, 2, 2293763, 393216, 0, 2359299, 393216, 1, 2424835, 393216, 2, 2293764, 458752, 0, 2359300, 458752, 1, 2424836, 458752, 2, 2293765, 524288, 0, 2359301, 524288, 1, 2424837, 524288, 2, 2293766, 393216, 0, 2359302, 393216, 1, 2424838, 393216, 2, 2293767, 458752, 0, 2359303, 458752, 1, 2424839, 458752, 2, 2293768, 524288, 0, 2359304, 524288, 1, 2424840, 524288, 2, 2293769, 393216, 0, 2359305, 393216, 1, 2424841, 393216, 2, 2293770, 458752, 0, 2359306, 458752, 1, 2424842, 458752, 2, 2293771, 524288, 0, 2359307, 524288, 1, 2424843, 524288, 2, 2293772, 393216, 0, 2359308, 393216, 1, 2424844, 393216, 2, 2293773, 458752, 0, 2359309, 458752, 1, 2424845, 458752, 2, 2293774, 524288, 0, 2359310, 524288, 1, 2424846, 524288, 2, 2293775, 393216, 0, 2359311, 393216, 1, 2424847, 393216, 2, 2293776, 458752, 0, 2359312, 458752, 1, 2424848, 458752, 2, 2293777, 524288, 0, 2359313, 524288, 1, 2424849, 524288, 2, 2293778, 393216, 0, 2359314, 393216, 1, 2424850, 393216, 2, 2293779, 458752, 0, 2359315, 458752, 1, 2424851, 458752, 2, 2293780, 524288, 0, 2359316, 524288, 1, 2424852, 524288, 2, 2097158, 393216, 0, 2162694, 393216, 1, 2228230, 393216, 2, 2097159, 458752, 0, 2162695, 458752, 1, 2228231, 458752, 2, 2097160, 524288, 0, 2162696, 524288, 1, 2228232, 524288, 2, 2097161, 393216, 0, 2162697, 393216, 1, 2228233, 393216, 2, 2097162, 458752, 0, 2162698, 458752, 1, 2228234, 458752, 2, 2097163, 524288, 0, 2162699, 524288, 1, 2228235, 524288, 2, 2097164, 393216, 0, 2162700, 393216, 1, 2228236, 393216, 2, 2097165, 458752, 0, 2162701, 458752, 1, 2228237, 458752, 2, 2097166, 524288, 0, 2162702, 524288, 1, 2228238, 524288, 2, 2097167, 393216, 0, 2162703, 393216, 1, 2228239, 393216, 2, 2097168, 458752, 0, 2162704, 458752, 1, 2228240, 458752, 2, 2097169, 524288, 0, 2162705, 524288, 1, 2228241, 524288, 2, 1900553, 393216, 0, 1966089, 393216, 1, 2031625, 393216, 2, 1900554, 458752, 0, 1966090, 458752, 1, 2031626, 458752, 2, 1900555, 524288, 0, 1966091, 524288, 1, 2031627, 524288, 2, 1900556, 393216, 0, 1966092, 393216, 1, 2031628, 393216, 2, 1900557, 458752, 0, 1966093, 458752, 1, 2031629, 458752, 2, 1900558, 524288, 0, 1966094, 524288, 1, 2031630, 524288, 2, 2293829, 393216, 0, 2359365, 393216, 1, 2424901, 393216, 2, 2293830, 458752, 0, 2359366, 458752, 1, 2424902, 458752, 2, 2293831, 524288, 0, 2359367, 524288, 1, 2424903, 524288, 2, 2293826, 393216, 0, 2359362, 393216, 1, 2424898, 393216, 2, 2293827, 458752, 0, 2359363, 458752, 1, 2424899, 458752, 2, 2293828, 524288, 0, 2359364, 524288, 1, 2424900, 524288, 2, 2293823, 393216, 0, 2359359, 393216, 1, 2424895, 393216, 2, 2293824, 458752, 0, 2359360, 458752, 1, 2424896, 458752, 2, 2293825, 524288, 0, 2359361, 524288, 1, 2424897, 524288, 2, 2293820, 393216, 0, 2359356, 393216, 1, 2424892, 393216, 2, 2293821, 458752, 0, 2359357, 458752, 1, 2424893, 458752, 2, 2293822, 524288, 0, 2359358, 524288, 1, 2424894, 524288, 2, 2293817, 393216, 0, 2359353, 393216, 1, 2424889, 393216, 2, 2293818, 458752, 0, 2359354, 458752, 1, 2424890, 458752, 2, 2293819, 524288, 0, 2359355, 524288, 1, 2424891, 524288, 2, 2293814, 393216, 0, 2359350, 393216, 1, 2424886, 393216, 2, 2293815, 458752, 0, 2359351, 458752, 1, 2424887, 458752, 2, 2293816, 524288, 0, 2359352, 524288, 1, 2424888, 524288, 2, 2293811, 393216, 0, 2359347, 393216, 1, 2424883, 393216, 2, 2293812, 458752, 0, 2359348, 458752, 1, 2424884, 458752, 2, 2293813, 524288, 0, 2359349, 524288, 1, 2424885, 524288, 2, 2097218, 393216, 0, 2162754, 393216, 1, 2228290, 393216, 2, 2097219, 458752, 0, 2162755, 458752, 1, 2228291, 458752, 2, 2097220, 524288, 0, 2162756, 524288, 1, 2228292, 524288, 2, 2097221, 393216, 0, 2162757, 393216, 1, 2228293, 393216, 2, 2097222, 458752, 0, 2162758, 458752, 1, 2228294, 458752, 2, 2097223, 524288, 0, 2162759, 524288, 1, 2228295, 524288, 2)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -368.0
offset_top = 32.0
offset_right = 367.0
offset_bottom = 120.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_i88sf")
theme_override_font_sizes/font_size = 64
text = "Usdi's Grand Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -98.0
offset_right = 128.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_hh2dn")
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_hh2dn")
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_hh2dn")
text = "Quit"

[node name="change_scene_animation" parent="." instance=ExtResource("8_q15wg")]
visible = false

[node name="player" parent="." instance=ExtResource("4_d0kg2")]
position = Vector2(192, 448)
script = null

[node name="Credits" type="Button" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -48.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("9_064ff")
text = "Credits"

[node name="SettingsMenu" parent="." instance=ExtResource("8_tat2j")]
visible = false

[node name="CreditsPage" parent="." instance=ExtResource("9_2tn6j")]
visible = false

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
